Fixed button spacing issue in model component

--- a/src/components/Modals/SimpleModal/style.scss
+++ b/src/components/Modals/SimpleModal/style.scss
@@ -48,7 +48,7 @@
     width: 100%;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
   }
 
   &__button {
